<resources>

    <string name="app_name">EMS in cloud</string>
    <string name="button_next">Next activity</string>
    <string name="local_service_started">servicio</string>
    
    <!-- Login Activity -->
    <string name="et_usuario">Introduce tu email</string>
    <string name="et_pass">*********</string>
    <string name="but_login">Login</string>
    <string name="but_olvide">Olvidé contraseña</string>
    <string name="but_registrar">Regístrate</string>
    
    
    <!-- HolaMundo Activity -->
	<string name="button_conexion">Traer farmacos del servidor</string>
	
	<!-- MenuPrincipal Activity -->
	<string name="titulo_protocolos">Protocolos</string>
	<string name="subtitulo_protocolos">Revisar los protocolos disponibles</string>
	<string name="titulo_farmacos">Farmacos</string>
	<string name="subtitulo_farmacos">Revisar los farmacos disponibles</string>
	<string name="titulo_notas">Notas</string>
	<string name="subtitulo_notas">Revisar las notas disponibles</string>
	<string name="action_refresh">Refrescar</string>
	<string name="testing">Testing</string>
	
	<string name="drawer_open">Menú Abierto</string>
    <string name="drawer_close">Menú Cerrado</string>
    
    <string name="opcion_protocolo">Protocolos</string>
    <string name="opcion_farmacos">Farmacos</string>
    <string name="opcion_notas">Notas</string>
    
    <string name="empezar">Empezar nuevo protocolo</string>
    <string name="continuar">Continuar protocolo</string>
    
    
    <string name="msg_sincronizacion">Última sincronización 01/04/2013</string>
    
    <string name="msg_test">Texto de prueba</string>
	
</resources>
