<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="240dp"  
    android:layout_height="match_parent"  
    android:layout_gravity="start"
   	android:background="@color/color_drawer_background" > 
	<LinearLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <ImageView
        android:id="@+id/imagen_ini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color_drawer_imagen_background"
        android:onClick="onClick" />
    

        <TextView
            android:id="@+id/opcion_protocolo"
            android:text="@string/opcion_protocolo"
            android:drawableLeft="@drawable/mini_diagnostico"
            style="@style/Drawer_style"/>
        
        <View 
		   android:layout_width="fill_parent"
		   android:layout_height="2dp"       
		   android:background="@color/color_barra"/>
        
        <TextView
            android:id="@+id/opcion_farmaco"
            android:text="@string/opcion_farmacos"
            android:drawableLeft="@drawable/mini_pastillas"
            style="@style/Drawer_style" />
        
        <View 
		   android:layout_width="fill_parent"
		   android:layout_height="2dp"       
		   android:background="@color/color_barra"/>
        
        <TextView
            android:id="@+id/opcion_notas"
            android:text="@string/opcion_notas"
            android:drawableLeft="@drawable/mini_diagnostico_check"
            style="@style/Drawer_style" />
                
	</LinearLayout>
	
	<TextView
            android:id="@+id/sincronizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"   
            android:text="@string/msg_sincronizacion" 
            android:textColor="@color/color_drawer_texto"
            android:background="#383938"
            android:paddingLeft="10dp"/>
	
</RelativeLayout>
