<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/protocolos"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    style="@style/Card_style"
	    android:gravity="center"
	    android:clickable="true"
	    android:onClick="onClick" >

        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/diagnostico"
            android:contentDescription="@string/titulo_protocolos" 
            />

        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:gravity="center_vertical"
		    android:background="@drawable/card_item_contenido" >
	        <TextView
	            android:id="@+id/titulo_protocolo"
	            style="@style/Card_contenido"
	            android:text="@string/titulo_protocolos"
	            android:textSize="24sp"   />
	        
	        <TextView
	            android:id="@+id/subtitulo_protocolo"
	            style="@style/Card_contenido"
	            android:text="@string/subtitulo_protocolos"
	            android:textSize="14sp"   />
        </LinearLayout>

	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/farmacos"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    style="@style/Card_style" 
	    android:gravity="center"
	    android:clickable="true" 
	    android:onClick="onClick">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pastillas"
            android:contentDescription="@string/titulo_farmacos" />
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:gravity="center_vertical"
		    android:background="@drawable/card_item_contenido" >
	        <TextView
	            android:id="@+id/titulo_farmaco"
	            style="@style/Card_contenido"
	            android:text="@string/titulo_farmacos"
	            android:textSize="24sp"  />
	        
	        <TextView
	            android:id="@+id/subtitulo_farmaco"
	            style="@style/Card_contenido"
	            android:text="@string/subtitulo_farmacos"
	            android:textSize="14sp"   />
        </LinearLayout>

	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/notas"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	   	style="@style/Card_style" 
	    android:gravity="center"
	    android:clickable="true" 
	    android:onClick="onClick">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/diagnostico_check" 
            android:contentDescription="@string/titulo_notas" />
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:gravity="center_vertical"
		    android:background="@drawable/card_item_contenido" >
	        <TextView
	            style="@style/Card_contenido"
	            android:text="@string/titulo_notas"
	            android:textSize="24sp"  />
	        
	        <TextView
	            style="@style/Card_contenido"
	            android:text="@string/subtitulo_notas"
	            android:textSize="14sp"  />
        </LinearLayout>

	</LinearLayout>

    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/testing" />

</LinearLayout>
