<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/protocolos"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    style="@style/Card_style"
	    android:gravity="center"
	    android:clickable="true"
	    android:onClick="onClick" >

        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/diagnostico"
            android:contentDescription="@string/titulo_protocolos" 
            android:background="@color/color_primario"
            />

        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="10dp" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/titulo_protocolos"
	            android:textColor="@color/color_secundario_a"
	            android:textSize="24sp"   />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/subtitulo_protocolos"
	            android:textColor="@color/color_primario"
	            android:textSize="14sp"   />
        </LinearLayout>

	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/farmacos"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    style="@style/Card_style" 
	    android:gravity="center"
	    android:clickable="true" 
	    android:onClick="onClick">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pastillas"
            android:contentDescription="@string/titulo_farmacos"
            android:background="@color/color_primario" />
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="10dp" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/titulo_farmacos"
	            android:textColor="@color/color_secundario_a"
	            android:textSize="24sp"  />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/subtitulo_farmacos"
	            android:textColor="@color/color_primario"
	            android:textSize="14sp"   />
        </LinearLayout>

	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/notas"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	   	style="@style/Card_style" 
	    android:gravity="center"
	    android:clickable="true" 
	    android:onClick="onClick">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/diagnostico_check" 
            android:contentDescription="@string/titulo_notas" 
            android:background="@color/color_primario"/>
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="10dp" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/titulo_notas"
	            android:textColor="@color/color_secundario_a"
	            android:textSize="22sp"  />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/subtitulo_notas"
	            android:textColor="@color/color_primario"
	            android:textSize="14sp"  />
        </LinearLayout>

	</LinearLayout>
    

</LinearLayout>
